--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
+    "firebase-admin": "^12.0.0",
     "helmet": "^6.0.1",
     "ip": "^1.1.8",
+    "lodash": "^4.17.21",
     "log4js": "^6.8.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
@@ -71,6 +74,7 @@
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/lodash": "^4.14.202",
     "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
