--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ip": "^1.1.8",
     "lodash": "^4.17.21",
     "log4js": "^6.8.0",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
