--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.0.0",
@@ -48,7 +49,9 @@
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
+    "excel4node": "^1.8.2",
     "firebase-admin": "^12.0.0",
+    "handlebars": "^4.7.8",
     "helmet": "^6.0.1",
     "ip": "^1.1.8",
     "lodash": "^4.17.21",
@@ -60,6 +63,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.9.0",
+    "puppeteer": "^22.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.11"
