--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
-    "excel4node": "^1.8.2",
+    "exceljs": "^4.4.0",
     "firebase-admin": "^12.0.0",
     "handlebars": "^4.7.8",
     "helmet": "^6.0.1",
@@ -66,7 +66,8 @@
     "puppeteer": "^22.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "xlsx-renderer": "^2.4.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
