--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lodash": "^4.17.21",
     "log4js": "^6.8.0",
     "moment": "^2.30.1",
+    "momo-payment-api": "^1.0.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
