--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "firebase-admin": "^12.0.0",
     "handlebars": "^4.7.8",
     "helmet": "^6.0.1",
+    "html-pdf-node": "^1.0.8",
     "ip": "^1.1.8",
     "lodash": "^4.17.21",
     "log4js": "^6.8.0",
@@ -81,6 +82,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
+    "@types/html-pdf-node": "^1.0.2",
     "@types/jest": "29.2.4",
     "@types/lodash": "^4.14.202",
     "@types/multer": "^1.4.7",
